[package]
name = "safe-graph"
version = "0.1.0"
authors = ["Dalibor Matura <dalibor.matura@gmail.com>"]
edition = "2018"
description = "Graph implementation, as a refactored version of GraphMap from popular crate petgraph."
homepage = "https://github.com/dalibor-matura/safe-graph"
readme = "README.md"
repository = "https://github.com/dalibor-matura/safe-graph"
keywords = ["safe", "graph", "petgraph", "GraphMap"]

[dependencies]
indexmap = "1.0.2"
