[package]
name = "safe-graph"
version = "0.1.6"
authors = ["Dalibor Matura <dalibor.matura@gmail.com>"]
edition = "2018"
description = "Graph implementation (refactored version of GraphMap from popular crate petgraph)."
documentation = "https://docs.rs/safe-graph"
homepage = "https://github.com/dalibor-matura/safe-graph"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/dalibor-matura/safe-graph"
keywords = ["safe", "graph", "petgraph", "GraphMap"]

[badges]
travis-ci = { repository = "dalibor-matura/safe-graph", branch = "master" }
codecov = { repository = "dalibor-matura/safe-graph", branch = "master", service = "github" }

[dependencies]
indexmap = "1.0.2"
